--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1JfK24Prg0KRSdjXIg6XQzsTgtjgHzIp3/view?usp=sharing" target="blank">Resume</a></li>
-          <li><a href="#services">Services &amp; Projects</a></li>
+          <li><a href="https://drive.google.com/file/d/1gqsXciHUmNYHJ3uT9ETLgZ-u9bldw9KA/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="#research">Research</a></li>
+          <li><a href="#technology">Technology</a></li>
+          <li><a href="#society">Society</a></li>
+          <!--<li><a href="#services">Services &amp; Projects</a></li> -->
           <li><a href="#portfolio">Visuals</a></li>
           <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber" target="blank">Engineering Videos</a></li>
           <li><a href="#animations">Animations</a></li>
@@ -98,8 +101,8 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Mechanical Engineering (Focus in Reliability and Optimization)</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> UMD College Park</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> TBD</li>
               </ul>
             </div>
           </div>
@@ -200,7 +203,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Python <i class="val">60%</i></span>
+            <span class="skill">Python <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
@@ -445,8 +448,342 @@
 
   <!-- End Resume Section -->
 
+<!-- Note: I had used this to size the columns before - col-lg-6 col-md-8 d-flex align-items-stretch mt-4 -->
+
+<section id="research" class="services">
+
+  <div class="section-title">
+    <p> </p>
+    <p>Research and Development</p>
+  </div>
+
+    <div class="row">
+
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Undergraduate Research</a></h4>
+          <p>Research Completed Before I Began My Master's Degree</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Surveying The Efforts for Simulating the Human Diaphragm</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling &amp;Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+        </div>
+      </div>
+
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Graduate Research</a></h4>
+          <p>Research Completed During My Master's Degree</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Surveying The Efforts for Simulating the Human Diaphragm</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+        </div>
+      </div>
+    </div>
+
+</section>
+
+<section id="technology" class="services">
+
+  <div class="section-title">
+    <p> </p>
+    <p>Products and Services</p>
+  </div>
+  <div class="row">
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Entrepreneurship</a></h4>
+          <p>Product Development and Commercialization</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1rs1U6k6W3JIUPx7J9WAlrADRJG4EuQgG/preview" target="_blank">Autonomous Off-Grid Vending Machine with Thermo-electric Climate Control <i>(pat. pend.)</i></a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1EHVHLBwzhbyZXgwRsyMcYwasUmHFYKY2/view?usp=sharing" target="_blank">TransPharm: The Pharmacy After Dark for Everyone</a>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Product Simulation</a></h4>
+          <p>Simulation of Products or Services</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Prediction of Diode Voltage Trends During Testing</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Physical Product</a></h4>
+          <p>Development and Manufacture of Physical Products</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1vlChb59o7hgmjS-GaBAPAtfN96P85kBu/preview" target="_blank">UMass Amherst Unmanned Aerial Vehicle: Uncle Sam</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
+        </div>
+      </div>
+    </div>
+</section>
+
+<section id="society" class="services">
+
+  <div class="section-title">
+    <p> </p>
+    <p>Understanding and Working with Society</p>
+  </div>
+
+    <div class="row">
+
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Teaching and Pedagogy</a></h4>
+          <p>Connecting with Students on a Variety of Subjects</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
+        </div>
+      </div>
+
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">People and Society</a></h4>
+          <p>Understanding the Society We are Engineering for</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1_Kig6iGSpOWaMHaP15Wk3Yf3OEg98zOQ/view?usp=sharing" target="_blank">The Bilateral Role of the Power of Suggestion in Oppression</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1t2v75-zYqjCKLrTRxZoj1nUpdrHNblwL/view?usp=sharing" target="_blank">Archaeology and Climate Change & The History of Archaeology</a>
+        </div>
+      </div>
+
+    </div>
+    <div class="portfolio"
+      <div class="container">
+
+        <div class="section-title">
+          <p> </p>
+          <p>C.A.D. & Diagrams</p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-12 d-flex justify-content-center">
+            <ul id="portfolio-flters">
+            <!--
+              <li data-filter="*" class="filter-active">All</li>
+              <li data-filter=".filter-app">C.A.D.</li>
+              <li data-filter=".filter-card">Diagrams</li>
+            -->
+            </ul>
+          </div>
+        </div>
+
+        <div class="row portfolio-container">
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="img/bassguitarresize.jpg" alt="" class="img-fluid"/>
+              <div class="portfolio-info">
+                <h4>Bass Guitar</h4>
+                <p>Designed in CATIA</p>
+                <div class="portfolio-links">
+                  <a href="img/bassguitarresize.jpg" data-gall="portfolioGallery" class="venobox" title="Open"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="img/leafresize.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Leaf</h4>
+                <p>Designed in CATIA</p>
+                <div class="portfolio-links">
+                  <a href="img/leafresize.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="img/2dofresize.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Two DOF Mass-Spring System</h4>
+                <p>Designed in Google Slides</p>
+                <div class="portfolio-links">
+                  <a href="img/2dofresize.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+                <img src="img/transpharmresize.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>TransPharm</h4>
+                <p>Designed in SolidWorks</p>
+                <div class="portfolio-links">
+                  <a href="img/transpharmresize.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="portfolio-wrap">
+              <img src="img/patentresize.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>TransPharm Drawing</h4>
+                <p>Designed in SolidWorks</p>
+                <div class="portfolio-links">
+                  <a href="img/patentresize.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+                <img src="img/smartwaterbottle (resized).jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Smart Water Bottle (Front View)</h4>
+                <p>Designed in Onshape</p>
+                <div class="portfolio-links">
+                  <a href="img/smartwaterbottle (resized).jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+                <img src="img/toaster iso (resize).jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Toaster (Isometric View)</h4>
+                <p>Designed in Onshape</p>
+                <div class="portfolio-links">
+                  <a href="img/toaster iso (resize).jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+                <img src="img/toaster top resize.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Toaster (Top View)</h4>
+                <p>Designed in Onshape</p>
+                <div class="portfolio-links">
+                  <a href="img/toaster top resize.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+                <img src="img/lightbulbresize (rotated).jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Lightbulb</h4>
+                <p>Designed in SolidWorks</p>
+                <div class="portfolio-links">
+                  <a href="img/lightbulbresize (rotated).jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+
+    <div class="portfolio">
+      <div class="section-title">
+        <p> </p>
+        <p>Animations</p>
+      </div>
+
+
+      <div class="row">
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+            <img src="img/LaPlaceMonteCarloSim.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <video width="500" height="320" controls autoplay loop>
+                <source src="img/LaplaceMonteCarloPiSolution.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+            <img src="img/Pareto Optimal Front.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <video width="500" height="320" controls autoplay loop>
+                <source src="img/ParetoOptFrontVideo.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+        <div class="portfolio-wrap">
+            <img src="img/DSO Thumbnail.jpg" class="img-fluid" alt="">
+          <div class="portfolio-info">
+            <div class="portfolio-links">
+              <video width="500" height="320" controls autoplay loop>
+                <source src="img/Error Bounds.mp4" type="video/mp4" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="bx bx-plus"></i>>
+              </video>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
   <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
+<!--  <section id="services" class="services">
 
       <div class="section-title">
         <p> </p>
@@ -535,11 +872,10 @@
         </div>
       </div>
 </div>
-
-  </section><!-- End Services Section -->
+</section><!-- End Services Section --> -->
 
   <!-- ======= Portfolio Section ======= -->
-  <section id="portfolio" class="portfolio">
+<!--   <section id="portfolio" class="portfolio">
 
     <div class="container">
 
@@ -551,11 +887,11 @@
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-          <!--
+
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">C.A.D.</li>
             <li data-filter=".filter-card">Diagrams</li>
-          -->
+
           </ul>
         </div>
       </div>
@@ -684,7 +1020,7 @@
     </div>
   </section><!-- End Portfolio Section -->
 
-    <section id="videos" class="portfolio">
+    <!--<section id="videos" class="portfolio">
 
     </section>
 
@@ -736,7 +1072,7 @@
         </div>
       </div>
     </div>
-    </section>
+  </section> -->
 
   <!-- ======= Contact Section ======= -->
 <!--
