--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           <li><a href="#technology">Technology</a></li>
           <li><a href="#society">Society</a></li>
           <!--<li><a href="#services">Services &amp; Projects</a></li> -->
-          <li><a href="#portfolio">Visuals</a></li>
+          <!--<li><a href="#portfolio">Visuals</a></li> -->
           <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber" target="blank">Engineering Videos</a></li>
-          <li><a href="#animations">Animations</a></li>
+          <!-- <li><a href="#animations">Animations</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
 
