--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1gqsXciHUmNYHJ3uT9ETLgZ-u9bldw9KA/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1LVRLADSWbJyofhpAOkI8vDIttJzqNU2w/view?usp=sharing" target="blank">Resume</a></li>
           <li><a href="#research">Research</a></li>
           <li><a href="#technology">Technology</a></li>
           <li><a href="#society">Society</a></li>
           <!--<li><a href="#services">Services &amp; Projects</a></li> -->
           <!--<li><a href="#portfolio">Visuals</a></li> -->
           <li><a href="https://www.youtube.com/channel/UC1yuISLe-oy-u6ofd_88PEw?view_as=subscriber" target="blank">Engineering Videos</a></li>
-          <!-- <li><a href="#animations">Animations</a></li> -->
+          <!--<li><a href="#animations">Animations</a></li> -->
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -66,7 +66,7 @@
         <a href="https://www.facebook.com/abhi.ram.39904?ref=bookmarks" class="facebook" target="blank"><i class="icofont-facebook"></i></a>
         <a href="https://www.instagram.com/abhishaq_attack/" class="instagram" target="blank"><i class="icofont-instagram"></i></a>
         <a href="https://www.linkedin.com/in/abhishekram8/" class="linkedin" target="blank"><i class="icofont-linkedin"></i></a>
-        <a href="mailto:abhishek.ram.umass@gmail.com" class="email" target="blank"><i class="icofont-email"></i></a>
+        <a href="mailto:aram8@umd.edu" class="email" target="blank"><i class="icofont-email"></i></a>
       </div>
 
     </div>
@@ -474,7 +474,7 @@
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Surveying The Efforts for Simulating the Human Diaphragm</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling &amp;Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling &amp; Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
         </div>
       </div>
 
@@ -488,11 +488,11 @@
           <h4><a href="">Graduate Research</a></h4>
           <p>Research Completed During My Master's Degree</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1U-z63NjnGrBVXxczhdTBy6TK9WAjlFeP/view?usp=sharing" target="_blank">State Variable Models for Viscoplastic Material Modeling</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Surveying The Efforts for Simulating the Human Diaphragm</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1cn41ZhRj0KnoRM0fB38aezjWIjndwGWY/view?usp=sharing">Manufacturing and Reliability Challenges for Advanced Electronics</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Prediction of the Voltage Trends of a Diode Over 48 Hours of Testing</a>
         </div>
       </div>
     </div>
