--- a/index.html
+++ b/index.html
@@ -93,16 +93,16 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> United States</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Citizenship:</strong> USA</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Undergrad:</strong> Mech. Engg. & Appl. Math</li>
-                <li><i class="icofont-rounded-right"></i> <strong>U.G. School:</strong> UMass Amherst</li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMass Amherst</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> TBD</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Master's School:</strong> TBD</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Mech. Engg.</li>
+                <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMD College Park</li>
               </ul>
             </div>
           </div>
@@ -119,7 +119,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="icofont-group-students"></i>
-            <span data-toggle="counter-up">15000</span>
+            <span data-toggle="counter-up">21000</span>
             <p>Taught and Represented</p>
           </div>
         </div>
@@ -127,7 +127,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
           <div class="count-box">
             <i class="icofont-bulb-alt"></i>
-            <span data-toggle="counter-up">16</span>
+            <span data-toggle="counter-up">25</span>
             <p>Completed Projects</p>
           </div>
         </div>
@@ -135,7 +135,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-group"></i>
-            <span data-toggle="counter-up">6</span>
+            <span data-toggle="counter-up">7</span>
             <p>Organizations Led</p>
           </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">4</span>
+            <span data-toggle="counter-up">9</span>
             <p>Employments</p>
           </div>
         </div>
@@ -472,9 +472,9 @@
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Surveying The Efforts for Simulating the Human Diaphragm</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Simulating the Human Diaphragm: A Survey</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling &amp; Optimizing Battery Consumption of An Autonomous Electric Vehicle</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Optimizing Battery Consumption of An Autonomous Electric Vehicle Using Trajectory and Force Modeling</a>
         </div>
       </div>
 
@@ -486,13 +486,14 @@
         <div class="icon-box"  class="flipLightBox">
           <div class="icon"><i class="icofont-mill"></i></div>
           <h4><a href="">Graduate Research</a></h4>
-          <p>Research Completed During My Master's Degree</p>
+          <p>Research Conducted During My Master's Degree</p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1cn41ZhRj0KnoRM0fB38aezjWIjndwGWY/view?usp=sharing" target="_blank">Summary of Industry-Sponsored Research Conducted at CALCE</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1U-z63NjnGrBVXxczhdTBy6TK9WAjlFeP/view?usp=sharing" target="_blank">State Variable Models for Viscoplastic Material Modeling</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1cn41ZhRj0KnoRM0fB38aezjWIjndwGWY/view?usp=sharing">Manufacturing and Reliability Challenges for Advanced Electronics</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Prediction of the Voltage Trends of a Diode Over 48 Hours of Testing</a>
+
         </div>
       </div>
     </div>
@@ -524,7 +525,7 @@
           <h4><a href="">Product Simulation</a></h4>
           <p>Simulation of Products or Services</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Prediction of Diode Voltage Trends During Testing</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Prediction of the Voltage Trends of a Diode Over 48 Hours of Testing</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
         </div>
@@ -536,7 +537,7 @@
           <h4><a href="">Physical Product</a></h4>
           <p>Development and Manufacture of Physical Products</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1vlChb59o7hgmjS-GaBAPAtfN96P85kBu/preview" target="_blank">UMass Amherst Unmanned Aerial Vehicle: Uncle Sam</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1vlChb59o7hgmjS-GaBAPAtfN96P85kBu/preview" target="_blank">Uncle Sam: UMass Amherst Unmanned Aerial Vehicle</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
         </div>
@@ -553,8 +554,16 @@
 
     <div class="row">
 
-      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
-
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-mill"></i></div>
+          <h4><a href="">Tutorial Development</a></h4>
+          <p>Connecting with Industry Groups on a Variety of Subjects</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://docs.google.com/presentation/d/1lX3-y_MapbXNzWn37V_VvKxPrBaPVlba/edit?usp=sharing&ouid=108773383647251615144&rtpof=true&sd=true" target="_blank">Applications of Prognostics in Product Qualification</a>
+        </div>
       </div>
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
@@ -563,16 +572,11 @@
           <h4><a href="">Teaching and Pedagogy</a></h4>
           <p>Connecting with Students on a Variety of Subjects</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1pbZP0DjUEvGVvkf42srH0WMEYc7PPUiE/view?usp=sharing" target="_blank">Introduction to MATLAB</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/18IeU6lby89XNUhdISfl5tRSF6mpK-Z3R/view?usp=sharing" target="_blank">PowerPass: The Portable Phone Charger Dispenser</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/178hDCre7kZUUS_aIflRc_bqOcKR4b9Dg/view?usp=sharing" target="_blank">Review of Strength of Materials</a>
         </div>
       </div>
-
-      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
-
-      </div>
-
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
