--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="progress">
             <span class="skill">Python <i class="val">85%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -466,7 +466,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-boy"></i></div>
           <h4><a href="">Undergraduate Research</a></h4>
           <p>Research Completed Before I Began My Master's Degree</p>
           <p> &nbsp; </p>
@@ -484,10 +484,11 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-business-man-alt-3"></i></div>
           <h4><a href="">Graduate Research</a></h4>
           <p>Research Conducted During My Master's Degree</p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1cn41ZhRj0KnoRM0fB38aezjWIjndwGWY/view?usp=sharing" target="_blank">Summary of Industry-Sponsored Research Conducted at CALCE</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1e9GQxGkskUsK4K8FdmcMwG5RhmVYpqLO/view?usp=sharing" target="_blank">Summary of Industry-Sponsored Research Conducted at CALCE</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1U-z63NjnGrBVXxczhdTBy6TK9WAjlFeP/view?usp=sharing" target="_blank">State Variable Models for Viscoplastic Material Modeling</a>
           <p> &nbsp; </p>
@@ -509,7 +510,7 @@
   <div class="row">
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-handshake-deal"></i></div>
           <h4><a href="">Entrepreneurship</a></h4>
           <p>Product Development and Commercialization</p>
           <p> &nbsp; </p>
@@ -521,7 +522,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-math"></i></div>
           <h4><a href="">Product Simulation</a></h4>
           <p>Simulation of Products or Services</p>
           <p> &nbsp; </p>
@@ -533,7 +534,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-circuit"></i></div>
           <h4><a href="">Physical Product</a></h4>
           <p>Development and Manufacture of Physical Products</p>
           <p> &nbsp; </p>
@@ -556,7 +557,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-blackboard"></i></div>
           <h4><a href="">Tutorial Development</a></h4>
           <p>Connecting with Industry Groups on a Variety of Subjects</p>
           <p> &nbsp; </p>
@@ -568,7 +569,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-education"></i></div>
           <h4><a href="">Teaching and Pedagogy</a></h4>
           <p>Connecting with Students on a Variety of Subjects</p>
           <p> &nbsp; </p>
@@ -580,7 +581,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-mill"></i></div>
+          <div class="icon"><i class="icofont-people"></i></div>
           <h4><a href="">People and Society</a></h4>
           <p>Understanding the Society We are Engineering for</p>
           <p> &nbsp; </p>
