--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
       <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
         <div class="icon-box"  class="flipLightBox">
-          <div class="icon"><i class="icofont-blackboard"></i></div>
+          <div class="icon"><i class="icofont-black-board"></i></div>
           <h4><a href="">Tutorial Development</a></h4>
           <p>Connecting with Industry Groups on a Variety of Subjects</p>
           <p> &nbsp; </p>
