--- a/index.html
+++ b/index.html
@@ -470,9 +470,9 @@
           <h4><a href="">Undergraduate Research</a></h4>
           <p>Research Completed Before I Began My Master's Degree</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view?usp=sharing" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Simulating the Human Diaphragm: A Survey</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view?usp=sharing" target="_blank">Simulating the Human Diaphragm: A Survey</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Optimizing Battery Consumption of An Autonomous Electric Vehicle Using Trajectory and Force Modeling</a>
         </div>
@@ -563,7 +563,7 @@
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://docs.google.com/presentation/d/1lX3-y_MapbXNzWn37V_VvKxPrBaPVlba/edit?usp=sharing&ouid=108773383647251615144&rtpof=true&sd=true" target="_blank">Applications of Prognostics in Product Qualification</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1oOgvQu9ztH4SOLrPtL4nYBF32XKA_Kjv/view?usp=sharing" target="_blank">Applications of Prognostics in Product Qualification</a>
         </div>
       </div>
 
