--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Mechanical Engineering with a Mathematical Focus</h3>
           <p class="font-italic">
-          An engineer with a passion for design, optimization, teaching, sustainability, and especially combining academics and applications to real-world problems.
+          An engineer with a passion for design, reliability, optimization, teaching, sustainability, and especially combining academics and applications to real-world problems.
           </p>
           <div class="row">
             <div class="col-lg-6">
