--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1norq06ZP2xF8BEY4wt4FkZNsQA0Aln0e/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1e9GQxGkskUsK4K8FdmcMwG5RhmVYpqLO/view" target="blank">Resume</a></li>
           <li><a href="#research">Research</a></li>
           <li><a href="#technology">Technology</a></li>
           <li><a href="#society">Society</a></li>
