--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@
         <ul>
           <li class="active"><a href="#header">Home</a></li>
           <li><a href="#about">About</a></li>
-          <li><a href="https://drive.google.com/file/d/1W5_xh9q91A3CHKiEc1HFVl6Q_M0Kyf8f/view?usp=sharing" target="blank">Resume</a></li>
+          <li><a href="https://drive.google.com/file/d/1gH84jx37tnSpl7Betl3o2IjcfyHLbCXS/view?usp=sharing" target="blank">Resume</a></li>
           <li><a href="#research">Research</a></li>
           <li><a href="#technology">Technology</a></li>
+          <li><a href="#presentation">Publications & Presentations</a></li>
           <li><a href="#society">Society</a></li>
           <!--<li><a href="#services">Services &amp; Projects</a></li> -->
           <!--<li><a href="#portfolio">Visuals</a></li> -->
@@ -88,7 +89,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Mechanical Engineering with a Mathematical Focus</h3>
           <p class="font-italic">
-          An engineer with a passion for design, reliability, optimization, teaching, sustainability, and especially combining academics and applications to real-world problems.
+          An engineer with a passion for design, optimization, teaching, sustainability, and especially combining academics and applications to real-world problems.
           </p>
           <div class="row">
             <div class="col-lg-6">
@@ -100,7 +101,7 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Living in:</strong> Somerville, MA</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Master's:</strong> Mech. Engg.</li>
                 <li><i class="icofont-rounded-right"></i> <strong>School:</strong> UMD College Park</li>
               </ul>
@@ -470,9 +471,9 @@
           <h4><a href="">Undergraduate Research</a></h4>
           <p>Research Completed Before I Began My Master's Degree</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view?usp=sharing" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1BvnTbUwKVjmGX_lWb3llP6032g-FvC9e/view" target="_blank">Improving Digital Twin Technology Using Machine Learning</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view?usp=sharing" target="_blank">Simulating the Human Diaphragm: A Survey</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1gAH2WRsjModMKeL4AGohLlflrfqapfMQ/view">Simulating the Human Diaphragm: A Survey</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Optimizing Battery Consumption of An Autonomous Electric Vehicle Using Trajectory and Force Modeling</a>
         </div>
@@ -488,11 +489,11 @@
           <h4><a href="">Graduate Research</a></h4>
           <p>Research Conducted During My Master's Degree</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1feypgDttIv_77jDqqfs1WiJpIqu6UjH5/view?usp=sharing" target="_blank">Summary of Industry-Sponsored Research Conducted at CALCE</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/135WW-KoNtUP5M4KWV_iXjyQBxkQ9H1il/view?usp=sharing" target="_blank"> Application of Diagnostics and Prognostics Techniques to Qualification Against Wearout Failure [Master's Thesis]</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1e9GQxGkskUsK4K8FdmcMwG5RhmVYpqLO/view?usp=sharing" target="_blank">Summary of Industry-Sponsored Research Conducted at CALCE</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1U-z63NjnGrBVXxczhdTBy6TK9WAjlFeP/view?usp=sharing" target="_blank">State Variable Models for Viscoplastic Material Modeling</a>
-          <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1cn41ZhRj0KnoRM0fB38aezjWIjndwGWY/view?usp=sharing">Manufacturing and Reliability Challenges for Advanced Electronics</a>
           <p> &nbsp; </p>
 
         </div>
@@ -526,7 +527,7 @@
           <h4><a href="">Product Simulation</a></h4>
           <p>Simulation of Products or Services</p>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/17cnEc7HS89R4j2gdnrYgEKKai9H2Dkpd/view?usp=sharing" target="_blank">Modeling and Prediction of the Voltage Trends of a Diode Over 48 Hours of Testing</a>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1DUBd27YI74Aw87xCgsiY_Pp7E8KwQZDh/view?usp=sharing" target="_blank">Modeling and Prediction of the Voltage Trends of a Diode Over 48 Hours of Testing</a>
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://drive.google.com/file/d/1-UTFf_XpwSSEhA9nS2OQo9ow6soyAgPL/view?usp=sharing" target="_blank">Optimizing the Bike Rebalancing Procedure for ValleyBike Share in Amherst, MA, USA</a>
         </div>
@@ -546,6 +547,45 @@
     </div>
 </section>
 
+<section id="presentation" class="services">
+
+  <div class="row">
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-papers"></i></div>
+          <h4><a href="">Publications</a></h4>
+          <p>Papers in Manuscript Form (to be Published)</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1Bpd0SzqLSSAQt90wsczGlCV233sNmsBk/view?usp=sharing" target="_blank">Application of Diagnostics and Prognostics Techniques to Qualification Against Wear-Out Failure (<i>Authors: Abhishek Ram and Diganta Das</i>)</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1C96v_OKtSTSQQCXdWunCH8Hv0qnFf3FW/view?usp=sharing" target="_blank">Life Cycle Profile Development for Product Reliability Assessment (<i>Authors: Abhishek Ram and Diganta Das</i>)</a>
+        </div>
+      </div>
+
+
+      <div class="col-lg-1 col-md-2 d-flex align-items-stretch mt-2">
+
+      </div>
+
+      <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+        <div class="icon-box"  class="flipLightBox">
+          <div class="icon"><i class="icofont-presentation"></i></div>
+          <h4><a href="">Publications</a></h4>
+          <p>Presentations Given to Other Organizations</p>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1pra0zqwyPnt9VKgfgRMeXowPKhuKyiZY/view?usp=sharing" target="_blank">Application of Diagnostics and Prognostics Techniques to Product Qualification (<i>Authors: Abhishek Ram and Diganta Das</i>)</a>
+          <p> &nbsp; </p>
+          <a class="btn btn-success" href="https://drive.google.com/file/d/1l7jUUZOKJCnQ0NixpPlhZdL522QUjWYc/view?usp=sharing" target="_blank">Life Cycle Profile Development for Product Reliability Validation (<i>Authors: Abhishek Ram and Diganta Das</i>)</a>
+        </div>
+      </div>
+  </div>
+
+</section>
+
 <section id="society" class="services">
 
   <div class="section-title">
@@ -563,7 +603,7 @@
           <p> &nbsp; </p>
           <a class="btn btn-success" href="https://www.youtube.com/playlist?list=PLe0EJN9Fts8tqRm1JE0QtShqaE7VvoTnp" target="_blank">Onboarding to Structural Simulation on <b>3D</b>EXPERIENCE</a>
           <p> &nbsp; </p>
-          <a class="btn btn-success" href="https://drive.google.com/file/d/1oOgvQu9ztH4SOLrPtL4nYBF32XKA_Kjv/view?usp=sharing" target="_blank">Applications of Prognostics in Product Qualification</a>
+          <a class="btn btn-success" href="https://docs.google.com/presentation/d/1lX3-y_MapbXNzWn37V_VvKxPrBaPVlba/edit?usp=sharing&ouid=108773383647251615144&rtpof=true&sd=true" target="_blank">Applications of Prognostics in Product Qualification</a>
         </div>
       </div>
 
