--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <img src="img/AbhishekRam_Me.jpg" alt="" class="img-fluid"/>
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>Mechanical Engineering with a Mathematical Focus</h3>
+          <h3>Engineering With an Emphasis on Resiliency</h3>
             <p class="font-italic">
               I have been fascinated with why for as long as I can remember. Traditionally, engineers are focused on how (e.g., how things work and work together). While the question of how was and is interesting to me, the question of why still holds my focus (e.g., why did they put it together this way, why did they make these decisions, why did they perceive their options this way?)
               This fascination with why has brought me to where I am now, and my goal in the future is to further understand the decision-making that goes into resilient system engineering and make sure our decision making aligns with the advancement we face in Industry 4.0.
